# os

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.rs  linker.ld  message.txt
.cargo/: config  config.toml
examples/: boot.asm  intvec.asm  usbboot.asm
kernel/: Cargo.toml  README.md  build.rs  build_back.rs
kernel/.cargo/: config.toml
kernel/src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  qemu.rs  serial.rs  test.rs  vga_buffer.rs
kernel/src/allocator/: bump.rs  fixed_size.rs  linked_list.rs  mod.rs
kernel/src/arch/x86/: cpu.rs  cpu_features.rs  cpuid_helper.rs  instruction.rs  mod.rs
kernel/src/arch/x86/x86_64/: mod.rs
kernel/src/sched/: mod.rs  scheduler.rs
kernel/src/task/: executor.rs  keyboard.rs  mod.rs  simple_executor.rs
kernel/targets/: README.md  x86_64-unknown-linux-gnu.json
kernel/tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
src/: main.rs
src/asm/: boot.asm
