[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

# 无约束测试
# 为测试禁用 harness flag，这个标志（flag）定义了是否将test runner用于集成测试中。
[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false

[package.metadata.bootloader]
# 映射完整物理内存，设置物理内存的虚拟地址偏移量为 0x0000f00000000000
# 逻辑地址（虚拟）= physical_memory_offset + 物理地址
physical-memory-offset = "0x0000f00000000000"

# bootimage runner 会在QEMU的默认测试命令后添加 test-args 参数。（对于 cargo run 命令，这个参数会被忽略。）
#在传递设备名 (isa-debug-exit)的同时，我们还传递了两个参数，iobase 和 iosize 。这两个参数指定了一个_I/O 端口_，我们的内核将通过它来访问设备。
# 具体配置参考：https://github.com/rust-osdev/bootimage/blob/master/Readme.md
[package.metadata.bootimage]
# 设备 isa-debug-exit 采用 IO 端口映射方式访问（in&out 指令）， 其 I/O 端口地址为 0xf4，大小为 0x04 字节。
# isa-debug-exit 设备的功能非常简单。当一个 value 写入 iobase 指定的端口时，它会导致QEMU以退出状态（exit status）(value << 1) | 1 退出。也就是说，当我们向端口写入 0 时，QEMU将以退出状态 (0 << 1) | 1 = 1 退出，而当我们向端口写入1时，它将以退出状态 (1 << 1) | 1 = 3 退出。
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none", # 禁用图形界面
    ]
test-success-exit-code = 33 # 由于我们指定了退出码为 33，所有非0的退出码都会被视为测试失败，所以需要再这里指定成功的退出码。
test-timeout = 300          # (in seconds)
# run-args=["-s", "-S"]

[dependencies]
bootloader = { version = "0.9.23", features = ["map_physical_memory"]} # 使用map_physical_memory特性，这样我们就可以在内核中使用物理内存了。
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
pc-keyboard = "0.5.0"
pic8259 = "0.10.2"
spin = "0.9.5"
uart_16550 = { version = "0.2.0", features = ["nightly"] }
volatile = "0.2.6"
x86_64 = "0.14.10"
linked_list_allocator = "0.9.0"
futures-util = { version = "0.3.26", default-features=false, features = ["alloc"] }

[dependencies.crossbeam-queue] # 无锁队列
version = "0.2.1"
default-features = false # 去除std依赖
features = ["alloc"]

[dependencies.conquer-once]
version = "0.2.0"
default-features = false

[build-dependencies]
build-target = "0.4.0"

